--- a/daily_candle_divergence.ipynb
+++ b/daily_candle_divergence.ipynb
@@ -562,7 +562,7 @@
     "\n",
     "Instead of ending all trades at a selling signal, another approach could consist of the following:\n",
     "1. The study of the cumulative returns by looking at what happened after the first time the buying signal occurred (until 30 days after the entry signal for example).\n",
-    "2. The building of confidence intervals."
+    "2. The build of confidence intervals."
    ]
   },
   {
